Updating model.html

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [
     {
@@ -36,32 +36,32 @@
      "output_type": "stream",
      "text": [
       "     Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0   Ahmed          1332   52   Single  Female              226.42   \n",
-      "1    Naif          2240   51  Married    Male              113.76   \n",
-      "2   salem          2467   22  Married    Male              376.84   \n",
-      "3    Hind          2067   32  Married  Female              187.67   \n",
-      "4  Sultan          1917   60   Single  Female              302.62   \n",
+      "0   sarah         16409   52   Single  Female              501.91   \n",
+      "1  Zainab          2980   24  Married  Female              457.79   \n",
+      "2  Mariam          1898   35  Married    Male              200.87   \n",
+      "3   Yazan          1679   59  Married  Female              296.33   \n",
+      "4   musab          4278   25   Single    Male             1039.79   \n",
       "\n",
       "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
-      "0                    2971.24     Savings                   0   \n",
-      "1                    3369.83     Savings                   2   \n",
-      "2                    7357.43    Spending                   1   \n",
-      "3                    3762.59  Investment                   5   \n",
-      "4                    3424.54    Spending                   0   \n",
+      "0                     829.22  Investment                   0   \n",
+      "1                    8852.17  Investment                   2   \n",
+      "2                   11773.95         NaN                   4   \n",
+      "3                   12087.75     Savings                   1   \n",
+      "4                    1193.65         NaN                   0   \n",
       "\n",
       "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
-      "0        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "1        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "2        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "0          Employed       Saudi       70/20/10                   ['no']   \n",
+      "1           Student       Saudi       50/30/20                  ['yes']   \n",
+      "2        Unemployed       Saudi       50/30/20                   ['no']   \n",
       "3        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "4        Unemployed       Saudi       50/30/20                  ['yes']   \n",
+      "4           Student       Saudi       60/20/20                  ['yes']   \n",
       "\n",
       "  Goal_Progress  \n",
       "0           yes  \n",
       "1           yes  \n",
-      "2           yes  \n",
-      "3            no  \n",
-      "4            no  \n",
+      "2            no  \n",
+      "3           yes  \n",
+      "4           yes  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1176 entries, 0 to 1175\n",
       "Data columns (total 14 columns):\n",
@@ -74,7 +74,7 @@
       " 4   Sex                        1176 non-null   object \n",
       " 5   Monthly Debt (SAR)         1176 non-null   float64\n",
       " 6   Elementary Expenses (SAR)  1176 non-null   float64\n",
-      " 7   Goal                       1176 non-null   object \n",
+      " 7   Goal                       793 non-null    object \n",
       " 8   Number of Children         1176 non-null   int64  \n",
       " 9   Employment_Status          1176 non-null   object \n",
       " 10  Nationality                1176 non-null   object \n",
@@ -84,20 +84,20 @@
       "dtypes: float64(2), int64(3), object(9)\n",
       "memory usage: 128.8+ KB\n",
       "None\n",
-      "Name                         0\n",
-      "Salary (SAR)                 0\n",
-      "Age                          0\n",
-      "State                        0\n",
-      "Sex                          0\n",
-      "Monthly Debt (SAR)           0\n",
-      "Elementary Expenses (SAR)    0\n",
-      "Goal                         0\n",
-      "Number of Children           0\n",
-      "Employment_Status            0\n",
-      "Nationality                  0\n",
-      "Budgeting_Rule               0\n",
-      "Financial_Comfortability     0\n",
-      "Goal_Progress                0\n",
+      "Name                           0\n",
+      "Salary (SAR)                   0\n",
+      "Age                            0\n",
+      "State                          0\n",
+      "Sex                            0\n",
+      "Monthly Debt (SAR)             0\n",
+      "Elementary Expenses (SAR)      0\n",
+      "Goal                         383\n",
+      "Number of Children             0\n",
+      "Employment_Status              0\n",
+      "Nationality                    0\n",
+      "Budgeting_Rule                 0\n",
+      "Financial_Comfortability       0\n",
+      "Goal_Progress                  0\n",
       "dtype: int64\n"
      ]
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [
     {
@@ -130,25 +130,25 @@
      "output_type": "stream",
      "text": [
       "          name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
-      "1170     bader          2007   28   Single    Male              236.13   \n",
-      "1172    Mugbil          2487   23   Single  Female              738.15   \n",
-      "1173  Khadijah          2994   44  Married    Male              572.44   \n",
-      "1174    Samira          2342   22  Married  Female              179.76   \n",
-      "1175    Salman          1215   27  Married    Male              203.54   \n",
+      "1165      Huda          5985   19  Married  Female              857.55   \n",
+      "1168     Rawan          2157   21   Single  Female              487.50   \n",
+      "1170  Mohammed          3255   22   Single    Male              741.37   \n",
+      "1171   Fatimah          2626   40   Single    Male              113.82   \n",
+      "1173      Asma          1117   19   Single  Female              138.70   \n",
       "\n",
       "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
-      "1170                    3234.27    Spending                   0   \n",
-      "1172                    4716.37    Spending                   0   \n",
-      "1173                   10603.21    Spending                   1   \n",
-      "1174                    8050.24    Spending                   0   \n",
-      "1175                    5343.83  Investment                   1   \n",
+      "1165                   13473.32  Investment                   0   \n",
+      "1168                    2729.23     Savings                   0   \n",
+      "1170                    3975.68  Investment                   0   \n",
+      "1171                    1221.78     Savings                   0   \n",
+      "1173                    1318.05     Savings                   0   \n",
       "\n",
       "     employment_status budgeting_rule  \n",
+      "1165          Employed       50/30/20  \n",
+      "1168           Student       50/30/20  \n",
       "1170           Student       50/30/20  \n",
-      "1172           Student       50/30/20  \n",
-      "1173        Unemployed       50/30/20  \n",
-      "1174        Unemployed       50/30/20  \n",
-      "1175           Student       50/30/20  \n"
+      "1171        Unemployed       50/30/20  \n",
+      "1173        Unemployed       50/30/20  \n"
      ]
     },
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,6 @@
        "      <th>state_Single</th>\n",
        "      <th>sex_Male</th>\n",
        "      <th>goal_Savings</th>\n",
-       "      <th>goal_Spending</th>\n",
        "      <th>employment_status_Student</th>\n",
        "      <th>employment_status_Unemployed</th>\n",
        "      <th>age_group_encoded</th>\n",
@@ -336,124 +335,119 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1332</td>\n",
-       "      <td>226.42</td>\n",
-       "      <td>2971.24</td>\n",
+       "      <td>16409</td>\n",
+       "      <td>501.91</td>\n",
+       "      <td>829.22</td>\n",
        "      <td>0</td>\n",
-       "      <td>50/30/20</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>70/20/10</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.169985</td>\n",
-       "      <td>2.230661</td>\n",
+       "      <td>0.030587</td>\n",
+       "      <td>0.050534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2240</td>\n",
-       "      <td>113.76</td>\n",
-       "      <td>3369.83</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>457.79</td>\n",
+       "      <td>8852.17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.153621</td>\n",
+       "      <td>2.970527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1679</td>\n",
+       "      <td>296.33</td>\n",
+       "      <td>12087.75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.176492</td>\n",
+       "      <td>7.199375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2501</td>\n",
+       "      <td>104.38</td>\n",
+       "      <td>6806.93</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50/30/20</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.041735</td>\n",
+       "      <td>2.721683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1949</td>\n",
+       "      <td>540.36</td>\n",
+       "      <td>8537.33</td>\n",
        "      <td>2</td>\n",
        "      <td>50/30/20</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.050786</td>\n",
-       "      <td>1.504388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2467</td>\n",
-       "      <td>376.84</td>\n",
-       "      <td>7357.43</td>\n",
+       "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>50/30/20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.152752</td>\n",
-       "      <td>2.982339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2318</td>\n",
-       "      <td>556.81</td>\n",
-       "      <td>5503.34</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50/30/20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.240211</td>\n",
-       "      <td>2.374176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2572</td>\n",
-       "      <td>629.61</td>\n",
-       "      <td>7032.60</td>\n",
-       "      <td>5</td>\n",
-       "      <td>50/30/20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.244794</td>\n",
-       "      <td>2.734292</td>\n",
+       "      <td>0.277250</td>\n",
+       "      <td>4.380364</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "0          1332              226.42                    2971.24   \n",
-       "1          2240              113.76                    3369.83   \n",
-       "2          2467              376.84                    7357.43   \n",
-       "5          2318              556.81                    5503.34   \n",
-       "6          2572              629.61                    7032.60   \n",
+       "    salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
+       "0          16409              501.91                     829.22   \n",
+       "1           2980              457.79                    8852.17   \n",
+       "3           1679              296.33                   12087.75   \n",
+       "11          2501              104.38                    6806.93   \n",
+       "13          1949              540.36                    8537.33   \n",
        "\n",
-       "   number_of_children budgeting_rule  state_Single  sex_Male  goal_Savings  \\\n",
-       "0                   0       50/30/20          True     False          True   \n",
-       "1                   2       50/30/20         False      True          True   \n",
-       "2                   1       50/30/20         False      True         False   \n",
-       "5                   3       50/30/20         False      True         False   \n",
-       "6                   5       50/30/20         False     False         False   \n",
+       "    number_of_children budgeting_rule  state_Single  sex_Male  goal_Savings  \\\n",
+       "0                    0       70/20/10          True     False         False   \n",
+       "1                    2       50/30/20         False     False         False   \n",
+       "3                    1       50/30/20         False     False          True   \n",
+       "11                   3       50/30/20         False      True         False   \n",
+       "13                   2       50/30/20         False      True          True   \n",
        "\n",
-       "   goal_Spending  employment_status_Student  employment_status_Unemployed  \\\n",
-       "0          False                      False                          True   \n",
-       "1          False                      False                          True   \n",
-       "2           True                      False                          True   \n",
-       "5          False                      False                          True   \n",
-       "6          False                      False                          True   \n",
+       "    employment_status_Student  employment_status_Unemployed  \\\n",
+       "0                       False                         False   \n",
+       "1                        True                         False   \n",
+       "3                       False                          True   \n",
+       "11                      False                          True   \n",
+       "13                       True                         False   \n",
        "\n",
-       "   age_group_encoded  debt_to_income_ratio  savings_ratio  \n",
-       "0                  3              0.169985       2.230661  \n",
-       "1                  3              0.050786       1.504388  \n",
-       "2                  0              0.152752       2.982339  \n",
-       "5                  3              0.240211       2.374176  \n",
-       "6                  0              0.244794       2.734292  "
+       "    age_group_encoded  debt_to_income_ratio  savings_ratio  \n",
+       "0                   3              0.030587       0.050534  \n",
+       "1                   0              0.153621       2.970527  \n",
+       "3                   4              0.176492       7.199375  \n",
+       "11                  1              0.041735       2.721683  \n",
+       "13                  1              0.277250       4.380364  "
       ]
      },
-     "execution_count": 415,
+     "execution_count": 499,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
    "source": [
