Updating model.html

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
-      "0   sarah         16409   52   Single  Female              501.91   \n",
-      "1  Zainab          2980   24  Married  Female              457.79   \n",
-      "2  Mariam          1898   35  Married    Male              200.87   \n",
-      "3   Yazan          1679   59  Married  Female              296.33   \n",
-      "4   musab          4278   25   Single    Male             1039.79   \n",
+      "    Name  Salary (SAR)  Age    State     Sex  Monthly Debt (SAR)  \\\n",
+      "0   Omar          1614   28   Single    Male              277.31   \n",
+      "1   Naif          2325   22  Married  Female              591.89   \n",
+      "2   Saad          2723   48  Married  Female              350.54   \n",
+      "3  Noura         15743   19   Single    Male             1149.78   \n",
+      "4    Ali         22269   30   Single  Female             4885.22   \n",
       "\n",
       "   Elementary Expenses (SAR)        Goal  Number of Children  \\\n",
-      "0                     829.22  Investment                   0   \n",
-      "1                    8852.17  Investment                   2   \n",
-      "2                   11773.95         NaN                   4   \n",
-      "3                   12087.75     Savings                   1   \n",
-      "4                    1193.65         NaN                   0   \n",
+      "0                    3911.03  Investment                   0   \n",
+      "1                    6625.49  Investment                   4   \n",
+      "2                    7410.93  Investment                   2   \n",
+      "3                    1996.29    Spending                   0   \n",
+      "4                    2388.83  Investment                   0   \n",
       "\n",
       "  Employment_Status Nationality Budgeting_Rule Financial_Comfortability  \\\n",
-      "0          Employed       Saudi       70/20/10                   ['no']   \n",
+      "0           Student       Other       50/30/20                   ['no']   \n",
       "1           Student       Saudi       50/30/20                  ['yes']   \n",
       "2        Unemployed       Saudi       50/30/20                   ['no']   \n",
-      "3        Unemployed       Saudi       50/30/20                  ['yes']   \n",
-      "4           Student       Saudi       60/20/20                  ['yes']   \n",
+      "3          Employed       Saudi       60/20/20                  ['yes']   \n",
+      "4          Employed       Saudi       60/20/20                  ['yes']   \n",
       "\n",
       "  Goal_Progress  \n",
       "0           yes  \n",
@@ -74,7 +74,7 @@
       " 4   Sex                        1176 non-null   object \n",
       " 5   Monthly Debt (SAR)         1176 non-null   float64\n",
       " 6   Elementary Expenses (SAR)  1176 non-null   float64\n",
-      " 7   Goal                       793 non-null    object \n",
+      " 7   Goal                       1176 non-null   object \n",
       " 8   Number of Children         1176 non-null   int64  \n",
       " 9   Employment_Status          1176 non-null   object \n",
       " 10  Nationality                1176 non-null   object \n",
@@ -84,20 +84,20 @@
       "dtypes: float64(2), int64(3), object(9)\n",
       "memory usage: 128.8+ KB\n",
       "None\n",
-      "Name                           0\n",
-      "Salary (SAR)                   0\n",
-      "Age                            0\n",
-      "State                          0\n",
-      "Sex                            0\n",
-      "Monthly Debt (SAR)             0\n",
-      "Elementary Expenses (SAR)      0\n",
-      "Goal                         383\n",
-      "Number of Children             0\n",
-      "Employment_Status              0\n",
-      "Nationality                    0\n",
-      "Budgeting_Rule                 0\n",
-      "Financial_Comfortability       0\n",
-      "Goal_Progress                  0\n",
+      "Name                         0\n",
+      "Salary (SAR)                 0\n",
+      "Age                          0\n",
+      "State                        0\n",
+      "Sex                          0\n",
+      "Monthly Debt (SAR)           0\n",
+      "Elementary Expenses (SAR)    0\n",
+      "Goal                         0\n",
+      "Number of Children           0\n",
+      "Employment_Status            0\n",
+      "Nationality                  0\n",
+      "Budgeting_Rule               0\n",
+      "Financial_Comfortability     0\n",
+      "Goal_Progress                0\n",
       "dtype: int64\n"
      ]
     }
@@ -122,33 +122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
-      "1165      Huda          5985   19  Married  Female              857.55   \n",
-      "1168     Rawan          2157   21   Single  Female              487.50   \n",
-      "1170  Mohammed          3255   22   Single    Male              741.37   \n",
-      "1171   Fatimah          2626   40   Single    Male              113.82   \n",
-      "1173      Asma          1117   19   Single  Female              138.70   \n",
+      "        name  salary_(sar)  age    state     sex  monthly_debt_(sar)  \\\n",
+      "1170   Malik          2534   20   Single    Male              460.27   \n",
+      "1172  shabab           923   53   Single    Male              166.03   \n",
+      "1173    Azoz          2280   28   Single  Female              474.47   \n",
+      "1174   Ahmed          1168   29  Married    Male               82.45   \n",
+      "1175    Asma         16544   29   Single  Female             4603.31   \n",
       "\n",
       "      elementary_expenses_(sar)        goal  number_of_children  \\\n",
-      "1165                   13473.32  Investment                   0   \n",
-      "1168                    2729.23     Savings                   0   \n",
-      "1170                    3975.68  Investment                   0   \n",
-      "1171                    1221.78     Savings                   0   \n",
-      "1173                    1318.05     Savings                   0   \n",
+      "1170                    3232.58     Savings                   0   \n",
+      "1172                    1499.43    Spending                   0   \n",
+      "1173                    4149.74  Investment                   0   \n",
+      "1174                    3948.37    Spending                   2   \n",
+      "1175                    3552.79     Savings                   0   \n",
       "\n",
       "     employment_status budgeting_rule  \n",
-      "1165          Employed       50/30/20  \n",
-      "1168           Student       50/30/20  \n",
       "1170           Student       50/30/20  \n",
-      "1171        Unemployed       50/30/20  \n",
-      "1173        Unemployed       50/30/20  \n"
+      "1172        Unemployed       50/30/20  \n",
+      "1173           Student       50/30/20  \n",
+      "1174           Student       50/30/20  \n",
+      "1175          Employed       50/30/20  \n"
      ]
     },
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
@@ -325,6 +325,7 @@
        "      <th>state_Single</th>\n",
        "      <th>sex_Male</th>\n",
        "      <th>goal_Savings</th>\n",
+       "      <th>goal_Spending</th>\n",
        "      <th>employment_status_Student</th>\n",
        "      <th>employment_status_Unemployed</th>\n",
        "      <th>age_group_encoded</th>\n",
@@ -334,120 +335,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16409</td>\n",
-       "      <td>501.91</td>\n",
-       "      <td>829.22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70/20/10</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.030587</td>\n",
-       "      <td>0.050534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2980</td>\n",
-       "      <td>457.79</td>\n",
-       "      <td>8852.17</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2325</td>\n",
+       "      <td>591.89</td>\n",
+       "      <td>6625.49</td>\n",
+       "      <td>4</td>\n",
        "      <td>50/30/20</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.153621</td>\n",
-       "      <td>2.970527</td>\n",
+       "      <td>0.254576</td>\n",
+       "      <td>2.849673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1679</td>\n",
-       "      <td>296.33</td>\n",
-       "      <td>12087.75</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50/30/20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>15743</td>\n",
+       "      <td>1149.78</td>\n",
+       "      <td>1996.29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60/20/20</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.176492</td>\n",
-       "      <td>7.199375</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.073034</td>\n",
+       "      <td>0.126805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2501</td>\n",
-       "      <td>104.38</td>\n",
-       "      <td>6806.93</td>\n",
+       "      <th>5</th>\n",
+       "      <td>17615</td>\n",
+       "      <td>206.64</td>\n",
+       "      <td>3237.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70/20/10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.011731</td>\n",
+       "      <td>0.183815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1554</td>\n",
+       "      <td>88.62</td>\n",
+       "      <td>10180.03</td>\n",
        "      <td>3</td>\n",
        "      <td>50/30/20</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.041735</td>\n",
-       "      <td>2.721683</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.057027</td>\n",
+       "      <td>6.550856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1949</td>\n",
-       "      <td>540.36</td>\n",
-       "      <td>8537.33</td>\n",
-       "      <td>2</td>\n",
+       "      <th>8</th>\n",
+       "      <td>16069</td>\n",
+       "      <td>2073.30</td>\n",
+       "      <td>3038.13</td>\n",
+       "      <td>1</td>\n",
        "      <td>50/30/20</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.277250</td>\n",
-       "      <td>4.380364</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.129025</td>\n",
+       "      <td>0.189068</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
-       "0          16409              501.91                     829.22   \n",
-       "1           2980              457.79                    8852.17   \n",
-       "3           1679              296.33                   12087.75   \n",
-       "11          2501              104.38                    6806.93   \n",
-       "13          1949              540.36                    8537.33   \n",
+       "   salary_(sar)  monthly_debt_(sar)  elementary_expenses_(sar)  \\\n",
+       "1          2325              591.89                    6625.49   \n",
+       "3         15743             1149.78                    1996.29   \n",
+       "5         17615              206.64                    3237.91   \n",
+       "7          1554               88.62                   10180.03   \n",
+       "8         16069             2073.30                    3038.13   \n",
        "\n",
-       "    number_of_children budgeting_rule  state_Single  sex_Male  goal_Savings  \\\n",
-       "0                    0       70/20/10          True     False         False   \n",
-       "1                    2       50/30/20         False     False         False   \n",
-       "3                    1       50/30/20         False     False          True   \n",
-       "11                   3       50/30/20         False      True         False   \n",
-       "13                   2       50/30/20         False      True          True   \n",
+       "   number_of_children budgeting_rule  state_Single  sex_Male  goal_Savings  \\\n",
+       "1                   4       50/30/20         False     False         False   \n",
+       "3                   0       60/20/20          True      True         False   \n",
+       "5                   0       70/20/10          True      True         False   \n",
+       "7                   3       50/30/20         False      True         False   \n",
+       "8                   1       50/30/20         False      True         False   \n",
        "\n",
-       "    employment_status_Student  employment_status_Unemployed  \\\n",
-       "0                       False                         False   \n",
-       "1                        True                         False   \n",
-       "3                       False                          True   \n",
-       "11                      False                          True   \n",
-       "13                       True                         False   \n",
+       "   goal_Spending  employment_status_Student  employment_status_Unemployed  \\\n",
+       "1          False                       True                         False   \n",
+       "3           True                      False                         False   \n",
+       "5          False                      False                         False   \n",
+       "7           True                      False                          True   \n",
+       "8          False                      False                         False   \n",
        "\n",
-       "    age_group_encoded  debt_to_income_ratio  savings_ratio  \n",
-       "0                   3              0.030587       0.050534  \n",
-       "1                   0              0.153621       2.970527  \n",
-       "3                   4              0.176492       7.199375  \n",
-       "11                  1              0.041735       2.721683  \n",
-       "13                  1              0.277250       4.380364  "
+       "   age_group_encoded  debt_to_income_ratio  savings_ratio  \n",
+       "1                  0              0.254576       2.849673  \n",
+       "3                  0              0.073034       0.126805  \n",
+       "5                  3              0.011731       0.183815  \n",
+       "7                  0              0.057027       6.550856  \n",
+       "8                  2              0.129025       0.189068  "
       ]
      },
-     "execution_count": 499,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
