--- a/data_genration.ipynb
+++ b/data_genration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "]\n",
     "states = [\"Single\", \"Married\"]\n",
     "sexes = [\"Male\", \"Female\"]\n",
-    "goals = [\"Savings\", \"Investment\",\"\"]\n",
+    "goals = [\"Savings\", \"Investment\",\"Spending\"]\n",
     "employment_statuses = [\"Employed\", \"Unemployed\", \"Student\"]\n",
     "budgeting_rules = [\"50/30/20\", \"70/20/10\", \"60/20/20\"]  # Spending/Saving/Investment percentages\n",
     "\n",
